--- a/package.json
+++ b/package.json
@@ -4,15 +4,38 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.0",
+    "@expo/vector-icons": "^14.0.2",
+    "@kichiyaki/react-native-barcode-generator": "^0.6.7",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.23",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~16.0.10",
+    "expo-secure-store": "~14.0.0",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-dom": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-barcode-builder": "^2.0.0",
+    "react-native-barcode-creator": "^0.1.7",
+    "react-native-barcode-svg": "^0.0.15",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-picker-select": "^9.3.1",
+    "react-native-print": "^0.11.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.10.1",
+    "react-native-web": "~0.19.13",
+    "expo-print": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
